structure, grids & navbar in progress

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,7 +24,7 @@ body{
   .subtitle{
     font-size: 1rem;
     font-family: 'Montserrat', sans-serif;
-    font-weight: lighter;
+    font-weight: light;
     letter-spacing: 2px;
     display: flex;
     justify-content: center;
@@ -36,7 +36,7 @@ body{
   .presentationSubtitle{
     font-size: 1rem;
     font-family: 'Montserrat', sans-serif;
-    font-weight: lighter;
+    font-weight: light;
     letter-spacing: 2px;
     display: flex;
     justify-content: center;
@@ -71,6 +71,13 @@ body{
     margin-left: 11rem;
   }
 
+  .navbar.show{
+    transition: all 0.6s ease-out;
+    background-color: #181818;
+    box-shadow: 5px 1px 8px rgb(13, 13, 13);
+  }
+  
+
 
 
 
@@ -82,16 +89,3 @@ body{
 
 
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
