--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -70,7 +70,9 @@ body{
     margin-bottom: 6rem;
   }
 
-
+  .imgprincipal {
+    margin: 0 auto;
+  }
 
   .sushi{
     margin-left: 25rem;
@@ -83,6 +85,8 @@ body{
     width: 100%;
     margin-left: -10rem;
   }
+
+  
 
   .sushi2{
     margin-top: -13rem;
@@ -143,6 +147,8 @@ body{
     background-color: #ea440c;
     border-color: #ea440c;
   }
+
+
 
   @media (min-width: 1280px){
 
@@ -488,10 +494,112 @@ body{
       }
 }
 
-  .logo {
-    margin: 0 auto;
+
+  @media (max-width: 500px){
+    
+    .logo{
+      width: 130px;
+      margin: 15px;
+    }
+    
+    .principal{
+      width: 100%;
+      text-align: center;
+    }
+
+    .imgprincipal{
+      margin-top: -5rem;
+      width: 330px;
+    }
+    .subtitle{
+      justify-content: center;
+      font-size: 13px;
+      color: #6f6f6f;
+      margin-top: 8rem;
+    }
+
+    .mainTitle{
+      margin-top: 1rem;
+      font-size: 36px;
+      letter-spacing: 2px;
+      line-height: normal;
+    }
+
+  
+    .productsimages{
+      text-align: center;
+      margin-top: -2rem;
+      width: 50%;
+    }
+
+    .presentationSubtitle{
+        justify-content: center;
+        font-size: 13px;
+        color: #b0b0b0;
+        margin-top: 6.5rem;
+        
+    }
+
+    .presentationTitle{
+      margin-top: 1rem;
+      font-size: 40px;
+      letter-spacing: 3px;
+      line-height: normal;
+    }
+    .sushi{
+      margin-left: 0rem;
+      margin-top: 0rem;
+      width: 30%;
+    }
+  
+    .sushi1{
+      margin-top: 0rem;
+      width: 30%;
+      margin-left: 0rem;
+    }
+  
+    .sushi2{
+      margin-top: 0rem;
+      width: 30%;
+      margin-left: 0rem;
+    }
+
+    .products{
+      margin-left: 1rem;
+      margin-top: 3rem;
+    }
+
+    .products > div::before{
+      content: '';
+      background-color: rgb(255, 255, 255);
+    width: 2rem;
+    height: 0.2rem;
+    display: flex;
+    position: relative;
+    margin-left: 1.2rem;
+    }
+
+    .products > div > h3{
+      color: #ffffff;
+      letter-spacing: 2px;
+      font-size: 1.20rem;
+      padding-left: 4.8rem;
+      margin-top:-1rem;
+      width: 50%;
+
+    }
+  
+    .products > div > p{
+      color: #f0f0f082;
+      font-family: 'Lato', sans-serif;
+      font-size: 12px;
+      padding-left: 5rem;
+      margin-top: 0.5rem;
+      margin-bottom: 4rem;
+      margin-right: 20rem;
+      width: 50%;
+    }
   }
- 
 /* } */
 
 
