--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -497,9 +497,16 @@ body{
 
   @media (max-width: 500px){
     
+    nav.sticky {
+      padding: 15px 0px;
+      background: #181818;
+      box-shadow: 15px 0px 5px black;
+    }
+  
     nav a{
       display: none;
     }
+
 
     .logo{
       width: 130px;
@@ -644,11 +651,14 @@ body{
 
     .productsContainer{
       height: 1350px;
+      width: 95%;
+      text-align:left;
     }
    
 
     .orderContainer{
       background-image: url(../img/redcircle.png);
+      text-align: center;
       background-repeat: no-repeat;
       background-size: 30%;
       background-position-x: 8.5rem;
@@ -666,7 +676,7 @@ body{
       color: #ffffff;
       font-family: 'Montserrat', sans-serif;
       font-weight: bold;
-      margin-left: 1.8rem;
+      /* margin-left: 1.8rem; */
     }
 
     .orderSubtitle{
@@ -675,9 +685,15 @@ body{
       font-family: 'Montserrat', sans-serif;
       font-weight: light;
       letter-spacing: 2px;
-      margin-left: 6.8rem;
+      /* margin-left: 6.8rem; */
     }
     
+    .infos{
+      width: 85%;
+      margin-left: 1rem;
+
+    }
+
     .infos > div::before{
       content: '';
       background-color: rgb(255, 255, 255);
@@ -685,29 +701,50 @@ body{
     height: 0.2rem;
     display: flex;
     position: relative;
-    margin-left: 2.3rem;
+    margin-left: 1.2rem;
     }
   
       .infos > div > h3{
         color: #ffffff;
       letter-spacing: 2px;
       font-size: 1.20rem;
-      margin-left: -6rem;
       margin-top:-1rem;
-      width: 100%;
+      padding-left: 4.8rem;
+      margin-top:-1rem;
+      width: 50%;
       }
     
       .infos > div > p{
         color: #f0f0f082;
         font-family: 'Lato', sans-serif;
         font-size: 12px;
-        padding-left: 6.3rem;
+        padding-left: 5rem;
         margin-top: 0.5rem;
         margin-bottom: 4rem;
         width: 100%;
-        margin-right: -10rem;
+        margin-right: -32rem;
       }
 
+      .footer{
+        background-color: #262626;
+        height: 500px;
+        font-size: 10.5px;
+        padding-bottom: 1rem;
+       }
+
+       .footer > div{
+        margin-top: 2rem;
+        margin-left: 1rem;
+       }
+
+       .footer > div > h3 {
+        margin-bottom: 0.5rem;
+       }
+
+       .logofooter{
+        width: 80%;
+        padding-bottom: 1rem;
+       }
 
   }
 
