--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -531,7 +531,7 @@ body{
 
     .mainTitle{
       margin-top: 1rem;
-      font-size: 36px;
+      font-size: 39px;
       letter-spacing: 2px;
       line-height: normal;
     }
@@ -562,7 +562,7 @@ body{
     }
 
     .sushi{
-      margin-left: 0rem;
+      margin-left: 1.2rem;
       margin-top: 0rem;
       max-width: 120%;
       width: 120%;
@@ -573,7 +573,7 @@ body{
       margin-top: 0rem;
       max-width: 120%;
       width: 120%;
-      margin-left: 0rem;
+      margin-left: 1.2rem;
       padding-bottom: 1em;
     }
   
@@ -581,7 +581,7 @@ body{
       margin-top: 0rem;
       max-width: 120%;
       width: 120%;
-      margin-left: 0rem;
+      margin-left: 1.2rem;
     }
 
     .products{
@@ -661,10 +661,11 @@ body{
       text-align: center;
       background-repeat: no-repeat;
       background-size: 30%;
-      background-position-x: 8.5rem;
+      background-position-x: 10rem;
       background-position-y: 2rem;
       height: 190px;
       padding-top: 3rem;
+      margin-bottom: 1rem;
     }
 
    
@@ -727,7 +728,7 @@ body{
 
       .footer{
         background-color: #262626;
-        height: 500px;
+        height: 100%;
         font-size: 10.5px;
         padding-bottom: 1rem;
        }
