--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -661,7 +661,7 @@ body{
       text-align: center;
       background-repeat: no-repeat;
       background-size: 30%;
-      background-position-x: 10rem;
+      background-position-x: 9.4rem;
       background-position-y: 2rem;
       height: 190px;
       padding-top: 3rem;
@@ -706,13 +706,12 @@ body{
     }
   
       .infos > div > h3{
-        color: #ffffff;
+      color: #ffffff;
       letter-spacing: 2px;
       font-size: 1.20rem;
       margin-top:-1rem;
       padding-left: 4.8rem;
       margin-top:-1rem;
-      width: 50%;
       }
     
       .infos > div > p{
@@ -731,6 +730,7 @@ body{
         height: 100%;
         font-size: 10.5px;
         padding-bottom: 1rem;
+        padding-right: 1rem;
        }
 
        .footer > div{
